#pragma once
#include<memory>
#include<string>
#include<vector>
#include<iostream>
#include <stdio.h>

#include<cinder/Cinder.h>
#include<cinder/CinderImGui.h>
#include <cinder/app/App.h>
#include <cinder/app/RendererGl.h>
#include <cinder/gl/gl.h>
#include <cinder/gl/Texture.h>
#include<cinder/ImageIo.h>
#include<imgui_node_editor.h>
#include <cinder/Rand.h>
#include<cinder/Log.h>

#include<Core.h>

#include"TellerCore.h"
#include"ContentManager.h"
#include"Episode.h"
#include"TellerEvent.h"

namespace Teller {
	class TellerCore;
	using CSVManager = ContentsManager<CSVLoader>;
	using EpisodeManager = ContentsManager<Episode>;

	namespace ed = ax::NodeEditor;

	class EditorManager :public std::enable_shared_from_this<EditorManager> {

	};

	enum class EDITOR_TYPE
	{
		NODE_EDITOR,
		EPISODE_EDITOR
	};

	class Editor :public std::enable_shared_from_this<Editor> {
	private:
		std::pair<int, int> lineBracket;
	protected:
		bool bEnabled;
	public:
		std::weak_ptr<TellerCore> parent;

		Editor() = default;
		virtual void Tick();
		void TickInternal();
		virtual ~Editor() = default;
		virtual void Update();

		//コピー禁止
		Editor(const Editor&) = delete;
		Editor& operator=(const Editor&) = delete;
		//ムーブ許可
		Editor& operator=(Editor&&) = default;

		void GetMessage(TEVENT_MESSAGE& _message) {

		}
		virtual void CallByParent();

	};

	class TopLevelMenu :public Editor {
	private:
	public:
		TopLevelMenu() : Editor() {};
		void Tick() override;
	};

	class EpisodeEditor :public Editor {
	private:
		//読み込まれた生のCSVファイルリスト
		//std::vector<std::string> loadedCsvFiles;

		//コンテンツマネージャーへのポインタ。
		std::pair<int, int> lineBracket;

		std::weak_ptr<CSVManager> ptr_csvContentManger;
		std::vector<std::string> fileVec_;
		std::map<int, std::vector<std::string>> data;

		std::string episodeNameCandidate;
		void Initialize();
	public:
		EpisodeEditor() :
			Editor(),
			lineBracket(std::make_pair<int, int>(0, 0)),
			episodeNameCandidate("")
		{
			Initialize();
		};

		~EpisodeEditor() = default;

		void CallByParent() override;

		void Tick() override;

		std::string SingleLine(std::vector<std::string > _vector) {
			auto s = std::string("");
			for (auto& e : _vector)s += e;
			return s;
		}
	};

	class EpisodeEventEditor :public Editor {
	private:
		struct LinkInfo {
			ed::LinkId Id;
			ed::PinId  InputId;
			ed::PinId  OutputId;
		};
		bool g_FirstFrame = true;
		ImVector<LinkInfo> g_Links;
		ed::EditorContext* gContext;
		std::weak_ptr<EpisodeManager> ptrEpsdMngr;
	public:
		EpisodeEventEditor() :
			Editor()
		{ gContext = ed::CreateEditor(); };

		~EpisodeEventEditor() = default;
		void Tick() override;
		void Update() override;

		void CallByParent() override;

		void AddNode();
	};

	class AssetViewer :public Editor {
	private:
	public:
		AssetViewer() :Editor() {};
		void Tick() override;
	};
}