@startuml ClassDiagram

skinparam {
    monochrome true
    padding 1
}

class ModuleCore{
    #std::weak_ptr<ModuleCore> parent
    #std::vector<std::shared_ptr<ModuleCore>> children
    +{abstract} void Tick()
    +{abstract} void Update()
}

class TellerCore{
    +void Tick() override
    +void Update() override
}
class GameModule{
    +void Tick() override
    +void Update() override
}
class SceneModule{
    +void Tick() override
    +void Update() override
}

class Editor{
    +void Tick() override
    +void Update() override
}

class Character{}

class MainText{}
class EpisodeEditor{}
class EpisodeEventEditor{}

ModuleCore <|-- TellerCore
ModuleCore <|-- GameModule
ModuleCore <|-- SceneModule
Agent <|-- Character 
Agent <|-- MainText
Editor <|-- EpisodeEditor
Editor <|-- EpisodeEventEditor

@enduml